tests/scan/fixtures/validation/negative/clean_go_clean-db-accessor/go.mod
module github.com/example/clean-db-accessor
go 1.21
